Kuberntes-cluster/app-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: blueharvest-service
spec: 
  selector: 
     app: my-app
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8080
