Kuberntes-cluster/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: redis-db-service
spec: 
  selector: 
     app: redis-in-memory
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 6379
