Kuberntes-cluster/ingress.yaml
apiVersion: v1
kind: Ingress
metadata: 
  name: blueh-app-ingress
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec: 
  rules:
    - host: blueharvest-app.com
      http:
        paths:
        - path: /
          backend: 
             serviceName: blueharvest-service
             servicePort: 80
